2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StackedBarRenderer3D.java
    (createStackedValueList): Deprecated,
    (createStackedValueList(CategoryDataset, Comparable, int[], double,
    boolean)): New method,
    (drawItem): Check for hidden series.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StackedBarRenderer.java
    (drawItem): Check for hidden series.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/CategoryItemRendererState.java
    (getVisibleSeriesArray()): New method,
    * source/org/jfree/chart/renderer/StackedAreaRenderer.java
    (drawItem): Fix handling of renderAsPercentages,
    (getStackValues): Likewise,
    * source/org/jfree/data/DataUtilities.java
    (calculateColumnTotal): New method,
    (calculateRowTotal): Likewise.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StackedAreaRenderer.java
    (drawItem): Generate entities only in first pass, and add call for drawing
    item labels in second pass.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/WaterfallBarRenderer.java
    (findRangeBounds): Handle null dataset,
    * tests/org/jfree/chart/renderer/category/junit/WaterfallBarRendererTests.java
    (testFindRangeBounds): New tests.

2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/renderer/category/StackedAreaRenderer.java
    (findRangeBounds): Check for null dataset,
    (drawItem): Return early if series is not visible,
    (getPreviousHeight): Deprecated as it is never used,
    * tests/org/jfree/chart/renderer/category/junit/StackedAreaRendererTests.java
    (testFindRangeBounds): New tests.

2009-02-03  David Gilbert  <david.gilbert@object-refinery.com>
