@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ----------
  * Month.java
  * ----------
- * (C) Copyright 2001-2008, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2001-2009, by Object Refinery Limited and Contributors.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   Chris Boek;
@@ -59,6 +59,7 @@
  * 16-Sep-2008 : Deprecated DEFAULT_TIME_ZONE, and updated parsing to handle
  *               extended range in Year (DG);
  * 25-Nov-2008 : Added new constructor with Locale (DG);
+ * 04-Feb-2009 : Fix for new constructor with Locale - bug 2564636 (DG);
  *
  */
 
@@ -169,7 +170,7 @@ public class Month extends RegularTimePeriod implements Serializable {
      * @since 1.0.12
      */
     public Month(Date time, TimeZone zone, Locale locale) {
-        Calendar calendar = Calendar.getInstance(zone);
+        Calendar calendar = Calendar.getInstance(zone, locale);
         calendar.setTime(time);
         this.month = calendar.get(Calendar.MONTH) + 1;
         this.year = calendar.get(Calendar.YEAR);
@@ -323,21 +324,20 @@ public class Month extends RegularTimePeriod implements Serializable {
      *         same.
      */
     public boolean equals(Object obj) {
-
-        if (obj != null) {
-            if (obj instanceof Month) {
-                Month target = (Month) obj;
-                return (this.month == target.getMonth()
-                        && (this.year == target.getYearValue()));
-            }
-            else {
-                return false;
-            }
+        if (obj == this) {
+            return true;
         }
-        else {
+        if (!(obj instanceof Month)) {
             return false;
         }
-
+        Month that = (Month) obj;
+        if (this.month != that.month) {
+            return false;
+        }
+        if (this.year != that.year) {
+            return false;
+        }
+        return true;
     }
 
     /**
