@@ -1,5 +1,11 @@
 2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>
 
+    Bug 2564636:
+    * source/org/jfree/data/time/Month.java
+    (Month(Date, TimeZone, Locale)): Use locale.
+
+2009-02-04  David Gilbert  <david.gilbert@object-refinery.com>
+
     * source/org/jfree/chart/renderer/category/StackedBarRenderer3D.java
     (createStackedValueList): Deprecated,
     (createStackedValueList(CategoryDataset, Comparable, int[], double,
